2008-11-06  Robert Staudinger  <robsta@gnome.org>

	* ccss/ccss-stylesheet.c (query_type_r), (query_shallow),
	(inherit_container_style), (query_container_r),
	(ccss_stylesheet_query):
	Basic support for inheriting style from the container.

2008-11-05  Robert Staudinger  <robsta@gnome.org>

	* ccss/ccss-selector-group.c (traverse_merge),
	(ccss_selector_group_merge_as_base):
	* ccss/ccss-selector-group.h:
	* ccss/ccss-stylesheet.c (fix_dangling_selectors),
	(ccss_stylesheet_query):
	* doc/tmpl/function.sgml:
	Remove unused code.

2008-11-04  Robert Staudinger  <robsta@gnome.org>

	* ccss/ccss-function.h:
	* doc/ccss-docs.sgml:
	* doc/ccss-sections.txt:
	* doc/tmpl/function.sgml:
	* doc/tmpl/selector_group.sgml:
	Update docs.

2008-11-04  Robert Staudinger  <robsta@gnome.org>

	* ccss/ccss.sym.in:
	* doc/ccss-sections.txt:
	* doc/tmpl/ccss-unused.sgml:
	* doc/tmpl/style.sgml:
	* doc/tmpl/stylesheet.sgml:
	* examples/example-2.c (main):
	Cleanup after API change.

2008-11-04  Robert Staudinger  <robsta@gnome.org>

	* ccss/Makefile.am:
	* ccss/ccss-block.h:
	* ccss/ccss-color.c:
	* ccss/ccss-function-priv.h:
	* ccss/ccss-function.c:
	* ccss/ccss-function.h:
	* ccss/ccss-image.c:
	* ccss/ccss-parser.c:
	* ccss/ccss-parser.h:
	* ccss/ccss-selector-group-priv.h:
	* ccss/ccss-selector-group.c:
	* ccss/ccss-selector-group.h:
	* ccss/ccss-selector.c:
	* ccss/ccss-selector.h:
	* ccss/ccss-style-priv.h:
	* ccss/ccss-style.h:
	* ccss/ccss-stylesheet.c:
	* ccss/ccss.c:
	Do not expose libcroco dependency in headers, also gets rid of implicit glib header dependency.

2008-11-03  Robert Staudinger  <robsta@gnome.org>

	* ccss/Makefile.am:
	* ccss/ccss-background-parser.c:
	* ccss/ccss-background-parser.h:
	* ccss/ccss-background.c (create_pattern), (ccss_background_fill):
	* ccss/ccss-background.h:
	* ccss/ccss-block.c:
	* ccss/ccss-block.h:
	* ccss/ccss-border-parser.c:
	* ccss/ccss-border-parser.h:
	* ccss/ccss-border.c:
	* ccss/ccss-border.h:
	* ccss/ccss-color.c: